Implemented Integer.valueOf().