@@ -10,12 +10,12 @@ class TestInteger {
 
   @Test
   void testConstructWithNull() {
-    assertThatNullPointerException().isThrownBy(() -> { new Integer(null); });
+    assertThatNullPointerException().isThrownBy(() -> { Integer.valueOf(null); });
   }
 
   @Test
   void testMethod_toString() {
-    assertThat(new Integer(-1).toString()).isEqualTo("-1");
-    assertThat(new Integer(0).toString()).isEqualTo("0");
+    assertThat(Integer.valueOf(-1).toString()).isEqualTo("-1");
+    assertThat(Integer.valueOf(0).toString()).isEqualTo("0");
   }
 }
